--- a/Naveen/3d video call.html
+++ b/Naveen/3d video call.html
@@ -5,19 +5,19 @@
  <body style="overflow: hidden;">
  	<div style="z-index:1; position: absolute;top:0; left:0;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\bokeh.jpg" height="890" width="1550">
+  <img src ="images/bokeh.jpg" height="890" width="1550">
      </div>
      <div style="z-index:2; position: absolute;top:50; left:1093;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\composite.jpg" height="200" width="350">
+  <img src ="images/composite.jpg" height="200" width="350">
      </div>
      <div style="z-index:3; position: absolute;top:320; left:1093;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\technology.jpg" height="200" width="350">
+  <img src ="images/technology.jpg" height="200" width="350">
      </div>
      <div style="z-index:4; position: absolute;top:590; left:1093;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\477ff.jpg" height="210" width="350">
+  <img src ="images/477ff.jpg" height="210" width="350">
      </div>
      <div style="z-index:5 ;position: absolute;left:350;top:26 ;width: 990; text-align: justify; font-size: 45px; color:yellow; text-decoration: underline; text-decoration-color:orange;"> 3d video calling </div>
      <div style="z-index:5;position: absolute;left:50;top:67;width:1000; text-align: justify; font-size:31px; color:whitesmoke; word-spacing: 3;">
@@ -26,9 +26,9 @@
         As you can think, this 3D calling technology enables you to communicate with a loved one in three dimensions rather than two. The patent lists a range of devices, including augmented reality glasses and augmented reality/virtual reality headsets, smartphones, and maybe a hologram, that could serve as the principal instruments for such a 3D communication system.
         Despite this, Meta would like to disrupt the communication sector with its latest technology, given the company’s declining daily active users in the market and other concerns surrounding Facebook. As a result, the corporation may rush the creation of such a sophisticated 3D discussion system in order to reclaim its position as the market’s top social company. </p>
     </div>
-    <a href="D:\metaproject\Naveen\marriages.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-   <a href="D:\metaproject\index tabs\Advantages of meta verse\Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\index tabs\Advantages of meta verse\Teleconference.html">
+    <a href="Naveen/marriages.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+   <a href="index tabs/Advantages of meta verse/Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="index tabs/Advantages of meta verse/Teleconference.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </body>
