--- a/Naveen/Geometry - Copy.html
+++ b/Naveen/Geometry - Copy.html
@@ -6,11 +6,11 @@
    overflow: hidden;">
 	 <div style="z-index:1; position: absolute;top:100; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/metave.gif" height="318" width="528">
+  <img src ="images/metave.gif" height="318" width="528">
      </div>
      <div style="z-index:2; position: absolute;top:450; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/eesr.gif" height="318" width="528">
+  <img src ="images/eesr.gif" height="318" width="528">
      </div>
       <div style="z-index:3;position: absolute;left:310;top:13; font-size: 60px;
  color:deeppink; text-decoration:underline; text-decoration-color:lightgreen; 
@@ -20,8 +20,8 @@
    Metaverse technology reinvokes interest in geometry. New geometric insight is expected to become very useful when cast in the emerging technology to manipulate space and geometry as a humanly digestible form of data, especially as means to turn massive amounts of data into a visual clarity leading to further subject matter insight. Space and geometry are such a profound 'given' for our Darwinian brain that the developers of non-Euclidean geometry were reluctant to expose their insight, afraid of shame and ridicule. Scientists are still reeling from the implications of Einstein's General Relativity where the Newtonian firm space is reshaped by the substance it carries. Quantum mechanical issues of dimension-less particles, wave-corpuscular duality, and entanglement also suggest that the well-known, intimately familiar geometry is reaching its limit. In general we live in the information age: man and machine face avalanche of data to be inferred upon. This requires an effective way to organize data, which is what a good geometry will do.
     So we call for a fresh look upon geometry as a utility function to allow a myriad of items to be placed in good order, on proper scaffolding (geometry) to be sorted out so that they create a humanly manageable whole. We present a proposed principle with which to explore building a more useful geometry to hang our substance of interest on.  
 </div>
-<a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Naveen\G1.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+<a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Naveen/G1.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
   </body>
 </html>
