--- a/Naveen/Transportation.html
+++ b/Naveen/Transportation.html
@@ -7,15 +7,15 @@
 
      <div style="z-index:1; position: absolute;top:30; left:1053;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/nissan.jpg" height="250" width="420">
+  <img src ="images/nissan.jpg" height="250" width="420">
      </div>
      <div style="z-index:2; position: absolute;top:300; left:1053;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/metav.png" height="250" width="420">
+  <img src ="images/metav.png" height="250" width="420">
      </div>
      <div style="z-index:3; position: absolute;top:570; left:1053;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/down (2).jpeg" height="250" width="420">
+  <img src ="images/down (2).jpeg" height="250" width="420">
      </div>
      <div style="z-index:4;position: absolute;left:310;top:13; font-size: 65px;
  color:deepskyblue; text-decoration:underline; text-decoration-color:lightgreen; 
