--- a/Naveen/adversiment.html
+++ b/Naveen/adversiment.html
@@ -5,20 +5,20 @@
  <body style="overflow:hidden">
  	<div style="z-index:1;position: absolute;left:335;top:0; ">
   <video height="900" width="1200" autoplay  muted loop=" true"  >
-   <source src="D:\metaproject\images\Metaverse5.mp4"></source>
+   <source src="images/Metaverse5.mp4"></source>
    </video>
  </div>
    
    <div style = "z-index:3;position:absolute;left: 0;top: 0; width:1528; height:900 ;">
-   <img src="D:\metaproject\images\color.jpg" width="700" height="600">
+   <img src="images/color.jpg" width="700" height="600">
     <div style="z-index:4 ;position: absolute;left:150;top:26 ;width: 990; text-align: justify; font-size: 35px; color:yellow; text-decoration: underline; text-decoration-color:yellow;">ADVERTISEMENT </div>
     <div style = "z-index:5;position:absolute;left:0;top:420; width:1528; height:900 ;">
-   <img src="D:\metaproject\images\Brand-Guide-Hero.jpeg" width="700" height="450"></div>
+   <img src="images/Brand-Guide-Hero.jpeg" width="700" height="450"></div>
    <div style="z-index:5;position: absolute;left:30;top:44;width:590; text-align: justify; font-size:26px; color:lightpink;color:black">
   <p>You can offer virtual advertising in the metaverse. For example, Bidstack, a video game ad tech company, transitioned from working off in real-world outdoor advertising to placing ads on virtual billboards. However, you can go beyond virtual billboards.For marketers, the metaverse represents an opportunity to engage consumers in entirely new ways while pushing internal capabilities and brand innovation in new directions.According to Verified Market Research, the Metaverse Market size was valued at USD 27.21 Billion in 2020.</p>  
   </div>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Naveen\buy and sell.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+  <a href="index tabs/Advantages of meta verse/commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Naveen/buy and sell.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
  </body>
 </html>
