--- a/Naveen/buy and sell.html
+++ b/Naveen/buy and sell.html
@@ -4,19 +4,19 @@
    </head>
  <body style="overflow: hidden;">
  <div style="z-index:1;position: absolute;left:0;top:0; width:1528;height: 900;">
-   <img src="D:\metaproject\images\buyland.png" width="750" height="870">
+   <img src="images/buyland.png" width="750" height="870">
   
  <div style="z-index:2;position: absolute;left:750;top:0; width:1528;height: 900;">
-  <img src="D:\metaproject\images\metaverso.jpg" width="790" height="870"></div>
+  <img src="images/metaverso.jpg" width="790" height="870"></div>
 
-  <div style="z-index:5;position: absolute;left:450;top:0;width:580; text-align: justify; font-size:25px; color:pink;background-image: url(D:/metaproject/infobg.png);
+  <div style="z-index:5;position: absolute;left:450;top:0;width:580; text-align: justify; font-size:25px; color:pink;background-image: url(infobg.png);
     border-style:solid;border-color:white">
     <div style=" text-align: center; font-size: 40px; color:yellow; text-decoration: underline; text-decoration-color:yellow;"> Selling & Buying </div>
     <p>Just like buying land in the real world, there are two main reasons you might want to buy land in the metaverse. The first is probably the safest – you want to use it for something, such as building a house to live in or premises from which to do business. When we talk about "living" in the metaverse, we really mean having a place to call home, where you can show off your possessions and maybe even have friends over to hang out. It’s a bit like having a personal web page back in the early days of the internet, before everyone moved over to social media.  </p>
   </div>
 </div>
-<a href="D:\metaproject\Naveen\adversiment.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\anil\Nft.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+<a href="Naveen/adversiment.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="anil/Nft.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
 </body>
 </html>
