--- a/Naveen/driving.html
+++ b/Naveen/driving.html
@@ -6,11 +6,11 @@
    overflow: hidden;">
     <div style="z-index:1; position: absolute;top:100; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\way.jpg" height="318" width="528">
+  <img src ="images/way.jpg" height="318" width="528">
      </div>
      <div style="z-index:2; position: absolute;top:450; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\v2.gif"  height="318" width="528">
+  <img src ="images/v2.gif"  height="318" width="528">
      </div>
      <div style="z-index:3;position: absolute;left:410;top:13; font-size: 60px;
  color:lightskyblue; text-decoration:underline; text-decoration-color:lightgreen; 
