--- a/Naveen/medical.html
+++ b/Naveen/medical.html
@@ -5,15 +5,15 @@
  <body style="overflow: hidden;">
  	<div style="z-index:1; position: absolute;top:0; left:0;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\photo.jpeg" height="890" width="1550">
+  <img src ="images/photo.jpeg" height="890" width="1550">
    </div>
    <div style="z-index:2; position: absolute;top:100; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\foto.jpg" height="318" width="528">
+  <img src ="images/foto.jpg" height="318" width="528">
      </div>
      <div style="z-index:3; position: absolute;top:450; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\impact.gif" height="318" width="528"></div>
+  <img src ="images/impact.gif" height="318" width="528"></div>
   <div style="z-index:4;position: absolute;left:400;top:26 ;width: 990; text-align: justify; font-size: 45px; color:blueviolet; text-decoration: underline; text-decoration-color:lightgreen;"> Medical conferences </div>
   <div style="z-index:5;position: absolute;left:50;top:97;width:850; text-align: justify; font-size:29px; color:black;word-spacing:14;">
    <p>Monitoring of patient activity in the metaverse means factors such as compliance could be tracked more easily, which would further assist with diagnosing and treating illness. In this alternate digital reality world, you can create your own digital avatar and don your headset and meet your doctor in avatar form.
@@ -22,9 +22,9 @@
       highly complex models that use artificial intelligence (AI) and large amounts of digital and physical data to accurately mimic a real-world object.
    </p>
 </div>
-   <a href="D:\metaproject\Naveen\political.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-   <a href="D:\metaproject\index tabs\Advantages of meta verse\Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Naveen\marriages.html">
+   <a href="Naveen/political.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+   <a href="index tabs/Advantages of meta verse/Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Naveen/marriages.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a> 
  </body>
