--- a/Naveen/physics.html
+++ b/Naveen/physics.html
@@ -6,11 +6,11 @@
    overflow: hidden;">
     <div style="z-index:1; position: absolute;top:100; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/gip.gif" height="318" width="528">
+  <img src ="images/gip.gif" height="318" width="528">
      </div>
      <div style="z-index:2; position: absolute;top:450; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/cxnf.gif" height="318" width="528">
+  <img src ="images/cxnf.gif" height="318" width="528">
      </div>
       <div style="z-index:3;position: absolute;left:310;top:13; font-size: 60px;
  color:deeppink; text-decoration:underline; text-decoration-color:lightgreen; 
@@ -23,8 +23,8 @@
      I can understand why physics modeling is important in creating digital twins, one of the key concepts of the enterprise metaverse according to Microsoft, Nvidia, and others. It’s critical that a 3D “digital twin” object, such as a digital car or a twin of a piece of medical equipment, mimics its real-world counterpart precisely. But what does it matter if, say, a 3D equivalent of Facebook doesn’t have precise physics? Indeed, the 3D avatars from Horizon Worlds.
 </p>
 </div>
-<a href="D:\metaproject\Naveen\biology1.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\aravind\chemistry.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+<a href="Naveen/biology1.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="aravind/chemistry.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
 </body>
 </html>
