--- a/Naveen/political.html
+++ b/Naveen/political.html
@@ -5,11 +5,11 @@
 <body style="background:linear-gradient(to bottom,#666699 0%, #ff9999 100%); overflow: hidden;">
 	<div style="z-index:1; position: absolute;top:100; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\giphy(2).gif" height="318" width="528">
+  <img src ="images/giphy(2).gif" height="318" width="528">
      </div>
      <div style="z-index:2; position: absolute;top:450; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\bznu.gif" height="300" width="528">
+  <img src ="images/bznu.gif" height="300" width="528">
      </div>
      <div style="z-index:3;position: absolute;left:280;top:13; font-size: 60px;
  color:lightseagreen; text-decoration:underline; text-decoration-color:blue ; 
@@ -20,9 +20,9 @@
 
 The metaverse may prove to be the solution. Once fully realized, the metaverse could deliver a highly interactive experience where people can move freely and participate in two-way dialogues without needing to leave their homes. In fact, the metaverse’s ability to transcend location and even languages is one reason it’s so exciting.</p>
   </div>
-<a href="D:\metaproject\index tabs\Advantages of meta verse\Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-   <a href="D:\metaproject\index tabs\Advantages of meta verse\Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Naveen\medical.html">
+<a href="index tabs/Advantages of meta verse/Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+   <a href="index tabs/Advantages of meta verse/Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Naveen/medical.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a> 
  </body>
