--- a/Naveen/remote work.html
+++ b/Naveen/remote work.html
@@ -5,15 +5,15 @@
 <body style="background:linear-gradient(to top right, #66ffff 0%, #cc33ff 100%); overflow: hidden;">
     <div style="z-index:1; position: absolute;top:30; left:1053;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\deskworking.gif" height="250" width="420">
+  <img src ="images/deskworking.gif" height="250" width="420">
      </div>
      <div style="z-index:2; position: absolute;top:300; left:1053;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\taskade.gif" height="250" width="420">
+  <img src ="images/taskade.gif" height="250" width="420">
      </div>
      <div style="z-index:3; position: absolute;top:570; left:1053;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\remote.jpeg" height="250" width="420">
+  <img src ="images/remote.jpeg" height="250" width="420">
      </div>
      <div style="z-index:3;position: absolute;left:330;top:13; font-size: 60px;
  color: white; text-decoration:underline; text-decoration-color:blue ; 
