--- a/anil/Movies in meta.html
+++ b/anil/Movies in meta.html
@@ -15,7 +15,7 @@
             }
             #h3{
                 font-family: serif;
-                font color: azure;
+                color: azure;
                 font-size: 25;
 
             }
@@ -29,22 +29,22 @@
 </head>
 <body style="overflow:hidden;zoom:80%">
 <div style="z-index: 4;position: absolute; top:-5; left:-5;width: 1450;height: 1000;">
-    <img id="img1" src="D:\metaproject\images\heskett-december-2021-meta.jpg" height="1229" width="1926">
+    <img id="img1" src="images/heskett-december-2021-meta.jpg" height="1229" width="1926">
 </div>
 <div style="z-index: 4;position: absolute; top:0; left:1;width: 1530;height: 990;">
-    <img  id="img2" src="D:\metaproject\images\pngkey.com-movie-night-png-671485.png"height="140" width="200">
+    <img  id="img2" src="images/pngkey.com-movie-night-png-671485.png"height="140" width="200">
 <div style="z-index: 4;position: absolute; top:-5; left:650;width: 1530;height: 990;">
-    <img  id="img2" src="D:\metaproject\images\pngaaa.com-2988926.png"height="140" width="700">
+    <img  id="img2" src="images/pngaaa.com-2988926.png"height="140" width="700">
 </div>
 
   <div style="z-index:4;position:absolute;left:20;top:120; height: 700; width: 1280;
                font-size: 25; color: antiquewhite; font-family:cursive; text-align: justify;">
     <div style="z-index: 4;position: absolute; top:53; left:1344;width: 1530;height: 990;">
-    <img id="img4" src="D:\metaproject\images\XRMust_CINEVR.original.jpg" height="300" width="480">
+    <img id="img4" src="images/XRMust_CINEVR.original.jpg" height="300" width="480">
 </div>
     <div style="z-index: 4;position: absolute; top:440; left:1314;width: 530;height: 400;border:groove 2px rosybrown; ">
    <video controls muted autoplay loop="true" height="400;" width= "530">
-    <source src="D:\metaproject\images\thor entry2.mp4">
+    <source src="images/thor entry2.mp4">
     <video>
 </div>             
    <p><b>
@@ -65,9 +65,9 @@ That’s not all, the movie viewing experience will also change as the audience 
 </div>
 </b></div>
 </div>
-<a href="D:\metaproject\anil\My Gaming2.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-   <a href="D:\metaproject\index tabs\Advantages of meta verse\games.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-      <a href="D:\metaproject\index tabs\Advantages of meta verse\games.html">
+<a href="anil/My Gaming2.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+   <a href="index tabs/Advantages of meta verse/games.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+      <a href="index tabs/Advantages of meta verse/games.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
   
