--- a/anil/My Gaming2.html
+++ b/anil/My Gaming2.html
@@ -26,18 +26,18 @@
 <body style="overflow:hidden;background: linear-gradient(60deg,#a120fa,#13a05c);">
 
       <div style="z-index: 4;position: absolute; top:0; left:650;width: 1530;height: 990;">
-    <img  src="D:\metaproject\images\pngtree-let-s-play-vector-realistic-neon-sign-of-video-vr-games-png-image_5991994.png" width="150"
+    <img  src="images/pngtree-let-s-play-vector-realistic-neon-sign-of-video-vr-games-png-image_5991994.png" width="150"
     height="100">
 </div>
       <div style="z-index: 4;position: absolute; top:150; left:1153;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\games3.jpg" width="350"
+    <img id="img2" src="images/games3.jpg" width="350"
     height="275">
 </div>
 <div style="z-index: 4;position: absolute; top:480; left:1153;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\1728-fortnite-ariana-grande-punchcard.jpg"height="275" width="350">
+    <img id="img2" src="images/1728-fortnite-ariana-grande-punchcard.jpg"height="275" width="350">
 </div>
 
-<div style="z-index:4;position:absolute;left:15;top:4; height: 900; width: 1110;background-image: url(D:/metaproject/infobg.png);
+<div style="z-index:4;position:absolute;left:15;top:4; height: 900; width: 1110;background-image: url(infobg.png);
                font-size: 20; color:azure; font-family:cursive ; text-align: center;">
    <h2 id="h2">&nbsp;&nbsp;&nbsp;
       GAMING IN METAVERSE&nbsp;&nbsp;&nbsp;
@@ -55,9 +55,9 @@
    Metaverse games are growing in popularity since they give gamers a more realistic and immersive gaming experience. Metaverse projects are important for a new generation of play-to-earn games. By playing the Metaverse NFT or Blockchain game, players can obtain different in-game collectables to trade with other participants or on external markets.
    </b></p>
 </div>
- <a href="D:\metaproject\index tabs\Advantages of meta verse\games.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-   <a href="D:\metaproject\index tabs\Advantages of meta verse\games.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-      <a href="D:\metaproject\anil\Movies in meta.html">
+ <a href="index tabs/Advantages of meta verse/games.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+   <a href="index tabs/Advantages of meta verse/games.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+      <a href="anil/Movies in meta.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
   
