--- a/anil/block chain.html
+++ b/anil/block chain.html
@@ -15,7 +15,6 @@
 			font-family: fantasy;
 			color: navajowhite;
 		}
-		}
 		#img2{
 			border: 6px;
 			border-style: inset;
@@ -25,17 +24,17 @@
 </head>
 <body style="overflow: hidden;">
 	
-	<img style="z-index: 3; position: fixed; min-height: 100%; min-width: 100%; right:0; bottom:0;" id="img1" src="D:\metaproject\images\Coinzilla-5tiny-750x375.jpg"
+	<img style="z-index: 3; position: fixed; min-height: 100%; min-width: 100%; right:0; bottom:0;" id="img1" src="images/Coinzilla-5tiny-750x375.jpg"
 	 height="780" width="1430" >
 	
 	<div style="z-index: 6;position: absolute; top:-25; left:500;width: 1530;height: 990;">
     <h1 id="h1" ><u>BLOCKCHAIN IN METAVERSE</u></h1>
 </div>
 	<div style="z-index: 4;position: absolute; top:160; left:1150;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\blk.jpg" width="520"   height="370">
+    <img id="img2" src="images/blk.jpg" width="520"   height="370">
 </div>
 	<div style="z-index: 4;position: absolute; top:555; left:1150;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\0 1j4j4LIHQQWVrKqs.png" width="520"
+    <img id="img2" src="images/0 1j4j4LIHQQWVrKqs.png" width="520"
    height="370">
 </div>
 <div id="div1" style="z-index:4;position:absolute;left:16;top:130; height:570; width: 1100;font-size: 24; color: antiquewhite; font-family:monospace; text-align: justify;">
@@ -51,8 +50,8 @@ Indian creators have been benefiting from this global phenomenon of creating dig
 Blockchain smart contracts can promote efficient management of the stakeholder relationships on a social, economic, legal, and other level inside the metaverse ecosystem.
 </b></p>
     </div>
-   <a href="D:\metaproject\anil\p&S lands.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+   <a href="anil/p&S lands.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="index tabs/Advantages of meta verse/commerce and crypto.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
 </body>
 </html>
