--- a/anil/c&d in meta.html
+++ b/anil/c&d in meta.html
@@ -26,13 +26,13 @@
 <body style="overflow: hidden; zoom:110%">
 	<div style="z-index: 6;position: absolute; top:0; left:300;width: 1530;height: 990;">  <h1 id="h1" ><b>COMMUNICATION AND DRAWING</b></h1></div>
 
-	<div style="z-index: 4; position: fixed; height: 1090; width: 1540; top:0; left:0;"><img id="img1" src="D:\metaproject\images\pexels-miguel-á-padriñán-255379.jpg" height="780" width="1395"></div>
+	<div style="z-index: 4; position: fixed; height: 1090; width: 1540; top:0; left:0;"><img id="img1" src="images/pexels-miguel-á-padriñán-255379.jpg" height="780" width="1395"></div>
 
 	<div style="z-index: 4;position: absolute; top:425; left:1000;width: 1510;height: 990;">
-    <img id="img2" src="D:\metaproject\images\metaverse-illustration-square.jpg" width="360" height="300">
+    <img id="img2" src="images/metaverse-illustration-square.jpg" width="360" height="300">
 </div>
 <div style="z-index: 4;position: absolute; top:155; left:1000;width: 1510;height: 990;">
-    <img id="img2" src="D:\metaproject\images\E-SlYtNUcAIvSqY.jpg" width="360"
+    <img id="img2" src="images/E-SlYtNUcAIvSqY.jpg" width="360"
     height="250"></div>
 
 <div id="div1" style="z-index:4;position:absolute;left:16;top:150; height:570; width: 950;
@@ -45,9 +45,9 @@
          The Metaverse might be an all new term for designers; something that they are newly becoming familiarized with. The Metaverse acts as a digital frontier for designers to create unique experiences through the virtual world of social connection. You might be wondering, well what does this mean for designers? Well, in simple terms; it means designers will be able to turn the industry on its head, providing an immersive experience for Metaverse users through technological advances.
 </b></p>
     </div>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-		<a href="D:\metaproject\anil\drive and dance practice.html">
+  <a href="index tabs/Advantages of meta verse/skills.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+		<a href="anil/drive and dance practice.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 
