--- a/anil/commerce in metaverce.html
+++ b/anil/commerce in metaverce.html
@@ -29,9 +29,9 @@
 </head>
 <body style="overflow:hidden;">
 <div style="z-index: 2;position: absolute; top:0; left:0;width: 1530;height: 990;">
-    <img src="D:\metaproject\images\thumbimg_25361957thumbejpg.jpg" height="870" width="1550">
+    <img src="images/thumbimg_25361957thumbejpg.jpg" height="870" width="1550">
     <div style="z-index: 2;position: absolute; top:120; left:18;width: 1530;height: 990;">
-    <img id="img1" src="D:\metaproject\images\image_1338722123.webp" height="720" width="1050">
+    <img id="img1" src="images/image_1338722123.webp" height="720" width="1050">
 </div>
 <div style="z-index: 2;position: absolute; top:0; left:495;width: 1530;height: 990;">
     <h1 id="h2"><b>
@@ -39,13 +39,13 @@
    </h1>
 </div>
 <div style="z-index: 2;position: absolute; top: -20; left: 0;width: 1530;height: 990;">
-    <img src="D:\metaproject\images\ecommerce-development.gif" height="150" width="190">
+    <img src="images/ecommerce-development.gif" height="150" width="190">
 </div>
 <div style="z-index: 4;position: absolute; top:490; left: 1095;width: 1530;height: 990;">
-    <img id="img3" src="D:\metaproject\images\Metaverse-Shop.gif" height="330" width="390">
+    <img id="img3" src="images/Metaverse-Shop.gif" height="330" width="390">
 </div>
 <div style="z-index: 4;position: absolute; top:130; left: 1095;width: 1530;height: 990;">
-    <img id="img3" src="D:\metaproject\images\Metaverse-in-e-commerce.jpg" height="330" width="390">
+    <img id="img3" src="images/Metaverse-in-e-commerce.jpg" height="330" width="390">
 </div>
 <div style="z-index:4;position:absolute;left:16;top:94; height:720; width:1050;
                font-size: 23; color: antiquewhite; font-family:monospace; text-align: justify;">
@@ -58,9 +58,9 @@ The metaverse is expected to transform every aspect of our lives, including the 
   </b>  
 </p>
 </div>
-<a href="D:\metaproject\Naveen\Agriculture.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"> <div style="position: fixed;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+<a href="Naveen/Agriculture.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="index tabs/Advantages of meta verse/education.html"> <div style="position: fixed;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
   
 </body>
    </html>
