--- a/anil/drive and dance practice.html
+++ b/anil/drive and dance practice.html
@@ -17,7 +17,6 @@
 			font-family: monospace;
 			color: yellow;
 		}
-		}
 		#img2{
 			border: 6px;
 			border-style: solid;
@@ -27,17 +26,17 @@
 </head>
 <body style="overflow: hidden;">
 	<div style="z-index: 3; position: absolute; height: 900; width: 1500; top:-10; left:-10;">
-	<img id="img1" src="D:\metaproject\images\VRRC_AR_3976f17b5c.jpg" height="890" width="1570">
+	<img id="img1" src="images/VRRC_AR_3976f17b5c.jpg" height="890" width="1570">
 	</div>
 	<div style="z-index: 6;position: absolute; top:-25; left: 320;width: 1530;height: 990;">
     <h1 id="h1" ><u><b>DRIVING AND DANCE PRACTICE</u></b></h1>
 </div>
 	<div style="z-index: 4;position: absolute; top:160; left:1120;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\COLORS-Dance-Deewane-Juniors-Metaverse-2.png" width="360"
+    <img id="img2" src="images/COLORS-Dance-Deewane-Juniors-Metaverse-2.png" width="360"
     height="230">
 </div>
 	<div style="z-index: 4;position: absolute; top:490; left:1120;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\vrdrivinglessons.jpg" width="360"
+    <img id="img2" src="images/vrdrivinglessons.jpg" width="360"
     height="230">
 </div>
 <div id="div1" style="z-index:4;position:absolute;left:16;top:130; height:570; width: 1080;font-size: 23; color: ghostwhite; font-family:monospace; text-align: justify;">
@@ -53,9 +52,9 @@
 They are no longer considered areas of relaxation, communal spaces to be enjoyed with strangers. Rather they have been cut off, suspended, and given a bad reputation as places where the virus can spread more rapidly. Don’t fear, the metaverse is ready and waiting to be discovered by dancers
 </b></p>
     </div>
-     <a href="D:\metaproject\anil\c&d in meta.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-		<a href="D:\metaproject\anil\exersice.html">
+     <a href="anil/c&d in meta.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+		<a href="anil/exersice.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </body>
