--- a/anil/exersice.html
+++ b/anil/exersice.html
@@ -30,16 +30,16 @@
 </head>
 <body style="overflow: hidden;">
 	<div style="z-index: 4; position: absolute; height: 990; width: 1440; top:0; left:0;">
-	<img id="img1" src="D:\metaproject\images\images.jpg" height="880" width="1575">
+	<img id="img1" src="images/images.jpg" height="880" width="1575">
 	</div>
 	<div style="z-index: 6;position: absolute; top:0; left:440;width: 1530;height: 990;">
     <h1 id="h1" ><b>METAVERSE IN EXERCISE</b></h1>
 </div>
 	<div style="z-index: 4;position: absolute; top:150; left:1080;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\0x0.jpg" width="400"  height="280">
+    <img id="img2" src="images/0x0.jpg" width="400"  height="280">
 </div>
 	<div style="z-index: 4;position: absolute; top:515; left:1080;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\1 0rqGQpxf8HDjLIihy6ukpA.png" width="400"
+    <img id="img2" src="images/1 0rqGQpxf8HDjLIihy6ukpA.png" width="400"
     height="280">
 </div>
 <div id="div1" style="z-index:4;position:absolute;left:16;top:150; height:640; width: 1020;font-size: 28;word-spacing: 15; color: black; font-family:cursive; text-align: justify;">
@@ -50,9 +50,9 @@
 		These companies offer services such as personal training and nutrition coaching to help people achieve their fitness goals with virtual reality.
 </b></p>
     </div>
-   <a href="D:\metaproject\anil\drive and dance practice.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-		<a href="D:\metaproject\anil\soft & lang.html">
+   <a href="anil/drive and dance practice.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+		<a href="anil/soft & lang.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </body>
