--- a/anil/p&S lands.html
+++ b/anil/p&S lands.html
@@ -16,7 +16,7 @@
 			font-family: serif;
 			color: blue;
 		}
-		}
+		
 		#img2{
 			border: 6px;
 			border-style: solid;
@@ -26,16 +26,16 @@
 </head>
 <body style="overflow: hidden;">
 	<div style="z-index: 3; position: absolute; height: 900; width: 1500; top:-10; left:-10;">
-	<img id="img1" src="D:\metaproject\images\land.jpg" height="860" width="1560">
+	<img id="img1" src="images/land.jpg" height="860" width="1560">
 	</div>
 <div style="z-index: 6;position: absolute; top:-25; left:60;width: 1530;height: 990;">
     <h1 id="h1" ><u>Purchasing and Selling of LANDS in METAVERSE</u></h1>
 </div>
 	<div style="z-index: 4;position: absolute;  top:180; left:1070;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\Metaverse-virtual-land-featured.webp" width="380"	  height="260">
+    <img id="img2" src="images/Metaverse-virtual-land-featured.webp" width="380"	  height="260">
 </div>
 	<div style="z-index: 4;position: absolute; top:515; left:1070;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\white_yacht_behind_villa.webp"  width="380" height="260">
+    <img id="img2" src="images/white_yacht_behind_villa.webp"  width="380" height="260">
 </div>
 <div id="div1" style="z-index:4;position:absolute;left:16;top:130; height:670; width: 1040; font-size: 23; color: black; font-family:monospace; text-align: justify;
 	word-spacing:4"><p>
@@ -44,8 +44,8 @@
 ust like buying land in the real world, there are two main reasons you might want to buy land in the metaverse. The first is probably the safest – you want to use it for something, such as building a house to live in or premises from which to do business.
 </b></p>
     </div>
-  <a href="D:\metaproject\anil\Nft.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\anil\block chain.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+  <a href="anil/Nft.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="anil/block chain.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
 </body>
 </html>
