--- a/anil/soft & lang.html
+++ b/anil/soft & lang.html
@@ -20,13 +20,13 @@
 </head>
 <body style="overflow: hidden;">
 	<div style="z-index: 3; position: absolute; height: 900; width: 1500; top:-10; left:-10;">
-	<img id="img1" src="D:\metaproject\images\background_11_nQJIc9J.normal.jpeg" height="880" width="1570">
+	<img id="img1" src="images/background_11_nQJIc9J.normal.jpeg" height="880" width="1570">
 	</div>
 	<div style="z-index: 6;position: absolute; top:; left:430;width: 1530;height: 990;">
     <h1 id="h1" ><u><b>SOFTWARES AND LANGUAGES</b></u></h1>
 </div>
 	<div style="z-index: 4;position: absolute; top:180; left:1130;width: 1530;height: 990;">
-    <img id="img2" src="D:\metaproject\images\Popular-Programmig-Languages.png" 
+    <img id="img2" src="images/Popular-Programmig-Languages.png" 
     width="340"  height="630">
 </div>
 <div style="z-index:4;position:absolute;left:16;top:150; height:570; width: 1070;
@@ -44,9 +44,9 @@ The type of software you want to develop is one consideration for which programm
 
 </b></p>
     </div>
-     <a href="D:\metaproject\anil\exersice.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-		<a href="D:\metaproject\aravind\3d design.html">
+     <a href="anil/exersice.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+		<a href="aravind/3d design.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </body>
