--- a/anil/space.html
+++ b/anil/space.html
@@ -14,23 +14,23 @@
 </head>
 <body style="overflow:hidden;">
 <div style="z-index: 4;position: absolute; top:-5; left:-5;width: 1430;height: 990;">
-    <img id="img1" src="D:\metaproject\images\space.jpg" height="1030" width="1830">
+    <img id="img1" src="images/space.jpg" height="1030" width="1830">
     <div style="z-index: 4;position: absolute; top:0; left:5;width: 1430;height: 990;">
-    <img src="D:\metaproject\images\200w-unscreen.gif" height="250" width="250">
+    <img src="images/200w-unscreen.gif" height="250" width="250">
 </div>
 
     <div style="z-index: 4;position: absolute; top:160; left:1100;width: 1430;height: 990;">
-    <img id="img2" src="D:\metaproject\images\24_1_720x540.jpg" height="300" width="400">
+    <img id="img2" src="images/24_1_720x540.jpg" height="300" width="400">
 </div>
 <div style="z-index: 4;position: absolute; top:490; left:1100;width: 1430;height: 990;">
-    <img id="img2" src="D:\metaproject\images\resized-Experience-Space-as-a-Virtual-Reality-Astronaut-e1531317001372.jpg" height="300" width="400">
+    <img id="img2" src="images/resized-Experience-Space-as-a-Virtual-Reality-Astronaut-e1531317001372.jpg" height="300" width="400">
 </div>
     <div style="z-index: 4;position: absolute; top:640; left: 140;width: 1430;height: 990;">
 
-    <img src="D:\metaproject\images\giphy.gif" height="250" width="280">
+    <img src="images/giphy.gif" height="250" width="280">
 </div>
 <div style="z-index: 4;position: absolute; top:610; left: 350;width: 1430;height: 990;">
-    <img src="D:\metaproject\images\BackRevolvingEgg-max-1mb.gif" height="350" width="450">
+    <img src="images/BackRevolvingEgg-max-1mb.gif" height="350" width="450">
 </div>
 <div style="z-index:4;position:absolute;left:300;top:-60; height: 1090; width: 1200;
                font-size: 45; color: red; text-align: justify;">
@@ -45,9 +45,9 @@
 	In parallel to the availability of VR-based tourism services, the acceptance and readiness among local tourists and travelers play a significant role in the success of this technology.
 	</b></p> 
 </div>
- <a href="D:\metaproject\aravind\oceans.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\index tabs\Advantages of meta verse\exploration3.html">   <div style="position: fixed;z-index:10;right: 0;bottom: 0;height:100;width:200;">
+ <a href="aravind/oceans.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="index tabs/Advantages of meta verse/exploration3.html">   <div style="position: fixed;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </body>
 </html>
