--- a/aravind/3d design.html
+++ b/aravind/3d design.html
@@ -5,11 +5,11 @@
 </head>
 <body style="background:linear-gradient(to right,#cd408f,#094fc3)">
 	<img style="z-index:5;top:100;left:850;position: fixed;"
-	src="D:\metaproject\images\3d design.jpg.png" width="700" height="700">
+	src="images/3d design.jpg.png" width="700" height="700">
 	<img style="z-index:1;position: fixed;min-height: 100%;min-width: 100%;width:110%;
-	height:110%;top:-10;left:-10;opacity: 0.2"	src="D:\metaproject\images\metaverse.jpg">
+	height:110%;top:-10;left:-10;opacity: 0.2"	src="images/metaverse.jpg">
    <img style="z-index:6;position:fixed;top:750;left:1070;width:300;height:50;filter:blur(3px);"
-   src="D:\metaproject\images\shadow.png">
+   src="images/shadow.png">
    <div style="z-index:5;position: fixed;top:20;left:300;width:1000;height:800;color: skyblue;font-family: Verdana;font-size:55px;text-decoration: underline;text-decoration-color:green;">3D designing</div> 
    <div style="z-index:6;position:fixed;top:100;left:50;width:830;height:800;font-size:23px;font-family:cursive;text-align:justify;color:white;"><p>3D design is the process of using computer-modeling software to create an object within a three-dimensional space. This means that the object itself has three key values assigned to it in order to understand where it exists within the space.</p><p>
 
@@ -24,9 +24,9 @@ As a result of the advances in 3D design, designers have been incorporating 3D o
 
   </p>
    </div>
-   <a href="D:\metaproject\anil\soft & lang.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-		<a href="D:\metaproject\anil\MY GAMING.html">
+   <a href="anil/soft & lang.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/skills.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+		<a href="anil/MY GAMING.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 
