--- a/aravind/chemistry.html
+++ b/aravind/chemistry.html
@@ -2,7 +2,7 @@
 <body style="background:linear-gradient(180deg,#013246,#5342dc)">
 	
 	<img style="z-index:5;top:0;left:0;position: fixed;opacity: 0.8"
-	src="D:\metaproject\images\CHEMISTRY 1.jpg" width="1530" height="830">
+	src="images/CHEMISTRY 1.jpg" width="1530" height="830">
   
 	<div style="z-index:6;position: absolute;top:100;left: 20;color:white;font-family: consolas;font-size: 20;word-spacing: 5"text-align="justify">For students who view chemistry as a mortal enemy, life just got a little easier.
 		The VR science unit has five experiences, including a field trip to an antique truck museum where the chemistry of rust is considered as well as a matching game in Trickybeard’s Cave which helps students memorize the symbols for various chemistry elements.
@@ -12,12 +12,12 @@ Wendy, the Science Teacher, conducts an experiment in 360 surround video and two
 Rene Gadelha, the curriculum specialist who oversaw the development of the unit said, “learning chemistry can be difficult, but studies show virtual reality provides a 60% lift for retention. That’s probably because it’s experiential and immersive, but either way, it works.”
 
 	</div>
-	<img style="z-index:7;position: absolute;top:500;left: 1100;width: 400;height:350"src="D:\metaproject\images\chemistry atoms.gif"> </img>
-     <img style="z-index:7;position: absolute;top:250;left: 200;width: 200;height:200"src="D:\metaproject\images\chemistry atoms.gif"> </img>
-	<img style="z-index:7;position: absolute;top:5;left: 650;width: 200;height:100"src="D:\metaproject\images\chemisrty logo.png"> </img>
-	<a href="D:\metaproject\Naveen\physics.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Naveen\Agriculture.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+	<img style="z-index:7;position: absolute;top:500;left: 1100;width: 400;height:350"src="images/chemistry atoms.gif"> </img>
+     <img style="z-index:7;position: absolute;top:250;left: 200;width: 200;height:200"src="images/chemistry atoms.gif"> </img>
+	<img style="z-index:7;position: absolute;top:5;left: 650;width: 200;height:100"src="images/chemisrty logo.png"> </img>
+	<a href="Naveen/physics.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Naveen/Agriculture.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
 	
 
 	</body>
