--- a/aravind/hill places.html
+++ b/aravind/hill places.html
@@ -2,7 +2,7 @@
 
 <body style="background: linear-gradient(150deg,#FFFFFF,#032A00)">
 	<img style="z-index:5;top:0;left:0;position: fixed;opacity: 0.8"
-	src="D:\metaproject\images\desert2.jpg" width="1550" height="900">
+	src="images/desert2.jpg" width="1550" height="900">
 	<div style="z-index:6;position: absolute;top:20;left: 400;color:black;font-family: impact;font-size: 30">Hill Places   </div>
 </div>
 	<div style="z-index:6;position: absolute;top:100;left: 20;width:750;color:black;font-family: consolas;font-size:20"text align="justify">Every human in the earth wishes to travel to another place for business purpose.
@@ -15,14 +15,14 @@
 	 to enjoy the nature  without wasting his time and money. in metaverse the human can travel from one place to another place easily with out any transportion charges or without wasting his time. In metaverse the human can travel any place virtually,
 	for example: if a human wants to travel to Deserts to see the beauty, he can easily travel through metaverse virtually without visiting physically, in metaverse he can also feel the air, water,taste and also we can feel rain that consist in that particular places. 
 </div>
-<img style="z-index:7;position: absolute;top:350;left: 400;"src="D:\metaproject\images\butterfly 2.gif"> </img>
-<img style="z-index:7;position: absolute;top:350;left: 200;"src="D:\metaproject\images\butterfly.gif"> </img>
+<img style="z-index:7;position: absolute;top:350;left: 400;"src="images/butterfly 2.gif"> </img>
+<img style="z-index:7;position: absolute;top:350;left: 200;"src="images/butterfly.gif"> </img>
 
 <img style="z-index:7;position: absolute;top:350;left: 1000;width:500" 
-		src="D:\metaproject\images\snake.gif"> </img>
-	 <a href="D:\metaproject\anil\Mueseum.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\index tabs\zoo.html">   <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
+		src="images/snake.gif"> </img>
+	 <a href="anil/Mueseum.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="index tabs/zoo.html">   <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 
 
