--- a/aravind/oceans.html
+++ b/aravind/oceans.html
@@ -7,17 +7,17 @@
  	text-decoration-color: pink">ocean in metaverse</div>
  	
  	
-	<img style="z-index:1;position: absolute; opacity: 0.6; filter:blur(6px);"src="D:\metaproject\icegif-526.gif" width="1500" height="850">
-	<img style="z-index:3;position: absolute;top:100; left:1200;"src="D:\metaproject\images\oceans.png" width="300" height="700">
-	<img style="z-index:3;position: absolute;top:50; left:30;"src="D:\metaproject\infobg.png" width="1100" height="800">
+	<img style="z-index:1;position: absolute; opacity: 0.6; filter:blur(6px);"src="icegif-526.gif" width="1500" height="850">
+	<img style="z-index:3;position: absolute;top:100; left:1200;"src="images/oceans.png" width="300" height="700">
+	<img style="z-index:3;position: absolute;top:50; left:30;"src="infobg.png" width="1100" height="800">
 	<div style="z-index:5;position: absolute;top:784; left:-;">
 	<marquee direction="left"> 
-	<img  style="transform: rotateY(180deg);" src="D:\metaproject\images\ALL FISHES.png" width="1530" height="80"></img>
+	<img  style="transform: rotateY(180deg);" src="images/ALL FISHES.png" width="1530" height="80"></img>
    </marquee>
 </div>
 <div style="z-index:5;position: absolute;top:0; left:-;">
 	<marquee direction="right"> 
-	<img src="D:\metaproject\images\ALL FISHES 2.png" width="1530" height="80"></img>
+	<img src="images/ALL FISHES 2.png" width="1530" height="80"></img>
    </marquee>
 </div>
 <div style="z-index:7;top:150;left:50;width:1050;height:760;position: fixed;
@@ -28,9 +28,9 @@ Moreover, it also require participants to have a great body, because they need t
 We can't go all places in our whole life time. Some people may have health issues, some people may have money issues and other have time issues, But if we want to experience those places. We can by this metaverse technology.</p>
 
 	</div>
- <a href="D:\metaproject\index tabs\zoo.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\anil\space.html">   <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
+ <a href="index tabs/zoo.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="anil/space.html">   <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 
 					
