--- a/index tabs/Advantages of meta verse/education.html
+++ b/index tabs/Advantages of meta verse/education.html
@@ -2,7 +2,7 @@
 	<head>
 		<title> Education</title>
 		<meta charset="UTF-8">
-		<script src="D:\metaproject\jq.js"></script>
+		<script src="jq.js"></script>
 		<script language="javascript">
 		</script>
 		<style>
@@ -80,33 +80,34 @@
 			}
 			100%{
 				top:30;left:570;font-size: 120px;
+			}
 		}
 		</style>
 	</head>
 <body>
 	<p style="position: fixed;z-index:8;top:30;left:570;width:400;height:100;font-size:120px;color:white;font-family:gabriola;text-shadow:10px 0px 10px #1245ab;" id="education2">Education</p>
-	<img  style="z-index:-10;position: fixed;right:0;bottom:0;min-height: 100%;min-width: 100%;width: 100%;height: 100%" src="D:\metaproject\images\education background.jpg" >
+	<img  style="z-index:-10;position: fixed;right:0;bottom:0;min-height: 100%;min-width: 100%;width: 100%;height: 100%" src="images/education background.jpg" >
 </img>
 	<div class ="slider" id="slider2" >
-		<span style="--i:1;"><a href="D:\metaproject\Naveen\Geometry - Copy.html" ><img src="D:\metaproject\images\geometry.jpg"></a>
+		<span style="--i:1;"><a href="Naveen/Geometry - Copy.html" ><img src="images/geometry.jpg"></a>
 		</span>
-		<span style="--i:2;"><a href="D:\metaproject\Naveen\biology.html" ><img src="D:\metaproject\images\biology.jpg"></a></span>
+		<span style="--i:2;"><a href="Naveen/biology.html" ><img src="images/biology.jpg"></a></span>
 
-		<span style="--i:3;"><a href="D:\metaproject\aravind\chemistry.html" ><img src="D:\metaproject\images\chemistry.jpg"></a></span>
+		<span style="--i:3;"><a href="aravind/chemistry.html" ><img src="images/chemistry.jpg"></a></span>
 
-		<span style="--i:4;"><a href="D:\metaproject\Naveen\physics.html" ><img src="D:\metaproject\images\physics.jpg"></a></span>
+		<span style="--i:4;"><a href="Naveen/physics.html" ><img src="images/physics.jpg"></a></span>
 
-		<span style="--i:5;"><a href="D:\metaproject\Naveen\Agriculture.html" ><img src="D:\metaproject\images\agriculture.jpg"></a></span>
+		<span style="--i:5;"><a href="Naveen/Agriculture.html" ><img src="images/agriculture.jpg"></a></span>
 
-		<span style="--i:6;"><a href="D:\metaproject\anil\commerce in metaverce.html" ><img src="D:\metaproject\images\Commerce.jpg"></a></span>
+		<span style="--i:6;"><a href="anil/commerce in metaverce.html" ><img src="images/Commerce.jpg"></a></span>
 
 	</div>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html">
+	<a href="index tabs/Advantages of meta verse/skills.html">
     <div style="position: absolute;z-index:10;right: 40;bottom: 30;height:100;width:100;">
     </div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\learning2.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html">
+	<a href="index tabs/Advantages of meta verse/learning2.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+	<a href="index tabs/Advantages of meta verse/skills.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 
