--- a/index tabs/Advantages of meta verse/exploration3.html
+++ b/index tabs/Advantages of meta verse/exploration3.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Exploration</title>
-	<script src="D:\metaproject\jq.js"></script>
+	<script src="jq.js"></script>
 	<script language="javascript">
 		function spacetourfun(){ $("#spacetourid").fadeIn();}
 		function spacetourfun2(){ $("#spacetourid").fadeOut();}
@@ -21,54 +21,54 @@
 	<p style="z-index:2;position:fixed;top:00;left:-10;width:500;text-align: center;	
 	text-shadow: 10px 0px 10px  #CCCA2D;font-family:pristina;font-size:90;color:royalblue;transform:rotateZ(-45deg);text-decoration: blink;background-color:#CCCA2D;border-radius:50%">Exploration<br>of  World</p>
 	<img style="position:fixed;right:0;bottom:0;min-width: 100%;min-height:100%;
-		z-index:1;" src="D:\metaproject\images\expbackground3.jpg" >
+		z-index:1;" src="images/expbackground3.jpg" >
 	<img style="position:fixed;left:10;top:430;width:300;height:200;z-index:2;" 
-		 src="D:\metaproject\images\museum3.png">
+		 src="images/museum3.png">
 	<img style="position:fixed;left:390;top:630;width:300;height:200;z-index:2;"
-		 src="D:\metaproject\images\hillplaces3.png">
+		 src="images/hillplaces3.png">
 	<img style="position:fixed;left:390;top:230;width:300;height:200;z-index:2;"
-		 src="D:\metaproject\images\desert3.png">
+		 src="images/desert3.png">
 	<img style="position:fixed;left:820;top:400;width:300;height:200;z-index:2;"
-		 src="D:\metaproject\images\zoo3.png">
+		 src="images/zoo3.png">
 	<img style="position:fixed;left:800;top:30;width:300;height:200;z-index:2;"
-		 src="D:\metaproject\images\oceans3.png">
+		 src="images/oceans3.png">
 	<img style="position:fixed;left:1240;top:200;width:300;height:200;z-index:2;"
-		 src="D:\metaproject\images\spacetour3.png">
+		 src="images/spacetour3.png">
 
 	<img style="position:fixed;left:10;top:430;width:300;height:200;z-index:3;
-		display:none;"  src="D:\metaproject\images\museum2.png" id="museumid">
+		display:none;"  src="images/museum2.png" id="museumid">
 	<img style="position:fixed;left:390;top:630;width:300;height:200;z-index:3;
-		 display:none;" src="D:\metaproject\images\hillplaces2.png" id="hillplacesid">
+		 display:none;" src="images/hillplaces2.png" id="hillplacesid">
 	<img style="position:fixed;left:390;top:230;width:300;height:200;z-index:3;
-		display:none;" src="D:\metaproject\images\desert2.png" id="desertid">
+		display:none;" src="images/desert2.png" id="desertid">
 	<img style="position:fixed;left:820;top:400;width:300;height:200;z-index:3;
-		display:none;" src="D:\metaproject\images\Zoo.png" id="zooid">
+		display:none;" src="images/Zoo.png" id="zooid">
 	<img style="position:fixed;left:800;top:30;width:300;height:200;z-index:3;
-		display:none;" src="D:\metaproject\images\oceans2.png" id="oceansid">
+		display:none;" src="images/oceans2.png" id="oceansid">
 	<img style="position:fixed;left:1240;top:200;width:300;height:200;z-index:3;
-		display:none;" src="D:\metaproject\images\spacetour2.png" id="spacetourid">
+		display:none;" src="images/spacetour2.png" id="spacetourid">
 
-	<a href="D:\metaproject\anil\Mueseum.html">
+	<a href="anil/Mueseum.html">
 		<img style="position:fixed;left:210;top:630;width:50;height:80;z-index:4;
 		opacity:0;" onmouseover="museumfun()" onmouseout="museumfun2()"></a>
-	<a href="D:\metaproject\aravind\hill places.html">
+	<a href="aravind/hill places.html">
 	<img style="position:fixed;left:430;top:530;width:50;height:80;z-index:4;
 	opacity:0;" onmouseover="hillplacesfun()" onmouseout="hillplacesfun2()"></a>
-	<a href="D:\metaproject\aravind\hill places.html">
+	<a href="aravind/hill places.html">
 	<img style="position:fixed;left:640;top:420;width:50;height:80;z-index:4;
 	opacity:0;" onmouseover="desertfun()" onmouseout="desertfun2()"></a>
-	<a href="D:\metaproject\index tabs\zoo.html">
+	<a href="index tabs/zoo.html">
 	<img style="position:fixed;left:860;top:310;width:50;height:80;z-index:4;
 	opacity:0;" onmouseover="zoofun()" onmouseout="zoofun2()"></a>
-	<a href="D:\metaproject\aravind\oceans.html">
+	<a href="aravind/oceans.html">
 	<img style="position:fixed;left:1070;top:210;width:50;height:80;z-index:4;
 	opacity:0;" onmouseover="oceansfun()" onmouseout="oceansfun2()"></a>
-	<a href="D:\metaproject\anil\space.html">
+	<a href="anil/space.html">
 	<img style="position:fixed;left:1290;top:100;width:50;height:80;z-index:4;
 	opacity:0;" onmouseover="spacetourfun()" onmouseout="spacetourfun2()"></a>
-<a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\index tabs\Advantages of meta verse\teleworking.html">   <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
+<a href="index tabs/Advantages of meta verse/commerce and crypto.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="index tabs/Advantages of meta verse/teleworking.html">   <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>	
      
 </body>
