--- a/index tabs/Advantages of meta verse/games.html
+++ b/index tabs/Advantages of meta verse/games.html
@@ -29,19 +29,19 @@
 </head>
 <body bgcolor="purple" style="overflow: hidden;">
 	<img  style="z-index:-10;position: fixed;right:0;bottom:0;min-height: 100%;min-width: 100%;width: 100%;height: 100%;filter:blur(3px);" 
-		src="D:\metaproject\images\entertainmentbg.jpg"  >
+		src="images/entertainmentbg.jpg"  >
 	<img style="border-radius:50%;position:absolute;top:480;left:600;z-index:3;"
-			width="300" height="300" src="D:\metaproject\images\games2.jpg"
+			width="300" height="300" src="images/games2.jpg"
 			 onclick="spin1();">
 	<img id="rotate1" style="position: absolute;top:-150;left:-80;z-index:2;border-top: 50%;" width="1650" height="1650" usemap="#entmap"
-		src="D:\metaproject\images\gaming2.png">
+		src="images/gaming2.png">
 	<map name="entmap">
-  <area shape="rect" coords="0,0,1650,825" href="D:\metaproject\anil\My Gaming2.html">
-  <area shape="rect" coords="0,825,1650,1650" href="D:\metaproject\anil\Movies in meta.html">
+  <area shape="rect" coords="0,0,1650,825" href="anil/My Gaming2.html">
+  <area shape="rect" coords="0,825,1650,1650" href="anil/Movies in meta.html">
 	</map> 
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\teleworking.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\Others.html">
+	<a href="index tabs/Advantages of meta verse/teleworking.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+	<a href="index tabs/Advantages of meta verse/Others.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 	
