--- a/index tabs/Advantages of meta verse/learning2.html
+++ b/index tabs/Advantages of meta verse/learning2.html
@@ -95,22 +95,22 @@
 </head>
 <body>	
 	 <div class="center">
-	 <a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html"><div style="opacity:0;" class="outer circle">
+	 <a href="index tabs/Advantages of meta verse/Advantages.html"><div style="opacity:0;" class="outer circle">
 	 	<button>dfasd</button>
 	 	<span></span>
 	 	<span></span>
 	 </div></a>
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div class="outer circle">
+		<a href="index tabs/Advantages of meta verse/education.html"><div class="outer circle">
 			<button>Education</button>
 			<span></span>
 			<span></span>
 		</div></a>
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\skills.html"><div class="outer circle">
+		<a href="index tabs/Advantages of meta verse/skills.html"><div class="outer circle">
 			<button>Skills</button>
 			<span></span>
 			<span></span>
 		</div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"><div style="opacity:0;" class="outer circle">
+	<a href="index tabs/Advantages of meta verse/commerce and crypto.html"><div style="opacity:0;" class="outer circle">
 	 	<button>dfasd</button>
 	 	<span></span>
 	 	<span></span>
