--- a/index tabs/Advantages of meta verse/skills.html
+++ b/index tabs/Advantages of meta verse/skills.html
@@ -25,7 +25,7 @@
 			}
 		}
 	</style>
-	<script src="D:\metaproject\jq.js"></script>
+	<script src="jq.js"></script>
 	<script language="javascript">
 		function skillsanim1()
 		{
@@ -61,29 +61,29 @@
 </head>
 <body style="background: linear-gradient(135deg,royalblue,deeppink);" onload="skillsanim1();">
 	<img style="z-index:8;top:320;left:625;position: absolute;border-style:solid;	border-width:5;	border-radius:50%;" 
-		 src="D:\metaproject\images\skills.jpg" width="300" height="200">
+		 src="images/skills.jpg" width="300" height="200">
 
-	<a href="D:\metaproject\anil\c&d in meta.html"><img style="z-index:7;top:320;left:625;" 
-		id="skills1" src="D:\metaproject\images\drawing.jpg" alt="" width="300" height="200"></a>
+	<a href="anil/c&d in meta.html"><img style="z-index:7;top:320;left:625;" 
+		id="skills1" src="images/drawing.jpg" alt="" width="300" height="200"></a>
 
-	<a href="D:\metaproject\anil\drive and dance practice.html"><img style="z-index:6;top:320;left:625; " id="skills2" 
-		 src="D:\metaproject\images\dancing.jpg"  width="300" height="200"></a>
+	<a href="anil/drive and dance practice.html"><img style="z-index:6;top:320;left:625; " id="skills2" 
+		 src="images/dancing.jpg"  width="300" height="200"></a>
 
-	<a href="D:\metaproject\anil\exersice.html"><img style="z-index:5;top:320;left:625; " id="skills3" 
-		src="D:\metaproject\images\exercise.jpg"  width="300" height="200"></a>
+	<a href="anil/exersice.html"><img style="z-index:5;top:320;left:625; " id="skills3" 
+		src="images/exercise.jpg"  width="300" height="200"></a>
 
-	<a href="D:\metaproject\anil\soft & lang.html"><img style="z-index:4;top:320;left:625;" id="skills4" 
-		 src="D:\metaproject\images\softwares&languages.jpg"  width="300" height="200"></a>
+	<a href="anil/soft & lang.html"><img style="z-index:4;top:320;left:625;" id="skills4" 
+		 src="images/softwares&languages.jpg"  width="300" height="200"></a>
 
-	<a href="D:\metaproject\aravind\3d design.html"><img style="z-index:3;top:320;left:625;" id="skills5" 
-	src="D:\metaproject\images\3ddesigning.jpg"  width="300" height="200"></a>
+	<a href="aravind/3d design.html"><img style="z-index:3;top:320;left:625;" id="skills5" 
+	src="images/3ddesigning.jpg"  width="300" height="200"></a>
 
-	<a href="D:\metaproject\anil\MY GAMING.html"><img style="z-index:2;top:320;left:625; " id="skills6" 
-		 src="D:\metaproject\images\games.jpg"  width="300" height="200"></a>
+	<a href="anil/MY GAMING.html"><img style="z-index:2;top:320;left:625; " id="skills6" 
+		 src="images/games.jpg"  width="300" height="200"></a>
 
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\learning2.html">
+	<a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+		<a href="index tabs/Advantages of meta verse/learning2.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 
