--- a/index tabs/Advantages of meta verse/teleworking.html
+++ b/index tabs/Advantages of meta verse/teleworking.html
@@ -93,24 +93,24 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
-	<img style="z-index:0;min-height: 100%;min-width: 100%;right: 0;bottom: 0;position: fixed;" src="D:\metaproject\images\learning3.jpg">
+	<img style="z-index:0;min-height: 100%;min-width: 100%;right: 0;bottom: 0;position: fixed;" src="images/learning3.jpg">
 	<div class="center">
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\exploration3.html"><div style="opacity:0;" class="outer button">
+	<a href="index tabs/Advantages of meta verse/exploration3.html"><div style="opacity:0;" class="outer button">
 	 	<button>dfasd</button>
 	 	<span></span>
 	 	<span></span>
 	 </div></a>
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\Teleconference.html"><div class="outer button">
+		<a href="index tabs/Advantages of meta verse/Teleconference.html"><div class="outer button">
 			<button>Teleconference</button>
 			<span></span>
 			<span></span>
 		</div></a>
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\workplace.html"><div class="outer button">
+		<a href="index tabs/Advantages of meta verse/workplace.html"><div class="outer button">
 			<button>Workplace</button>
 			<span></span>
 			<span></span>
 		</div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\games.html"><div style="opacity:0;" class="outer button">
+	<a href="index tabs/Advantages of meta verse/games.html"><div style="opacity:0;" class="outer button">
 	 	<button>dfasd</button>
 	 	<span></span>
 	 	<span></span>
