--- a/index tabs/Advantages of meta verse/workplace.html
+++ b/index tabs/Advantages of meta verse/workplace.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>jashuanim</title>
-	<script src="D:\metaproject\jq.js"></script>
+	<script src="jq.js"></script>
 	<script language="javascript">
 		function fadeout2()
 		{
@@ -121,23 +121,23 @@
 <body style="background: linear-gradient(to right,skyblue,green);overflow:hidden;">
 	<p style="z-index:2;position:fixed;top:-200;left:400;width:1500;	
 	text-shadow: 10px 0px 0px  #cccccc;	font-family:Gabriola;font-size:200;color:#B03060">Work Place</p>
-	<img src="D:\metaproject\images\remotework.jpg" id="medical">
-	<iframe src="D:\metaproject\Naveen\remote work.html" id="medical2"></iframe>
+	<img src="images/remotework.jpg" id="medical">
+	<iframe src="Naveen/remote work.html" id="medical2"></iframe>
 	<div style="top: 325;left: 200;width: 300;height: 200;position: absolute;z-index: 5;" onmouseover="medical1f()"></div>
-	<img src="D:\metaproject\images\driving.jpg" id="driving">
-	<iframe src="D:\metaproject\Naveen\driving.html" id="driving2"></iframe>
+	<img src="images/driving.jpg" id="driving">
+	<iframe src="Naveen/driving.html" id="driving2"></iframe>
 	<div style="top: 325;left: 600;width: 300;height: 200;position: absolute;z-index: 5;" onmouseover="driving1f()"></div>
-	<img src="D:\metaproject\images\transportation.jpg" id="transport">
-	<a href="D:\forhtml\transport.html" target="transportframe">
+	<img src="images/transportation.jpg" id="transport">
+	<a href="D:/forhtml/transport.html" target="transportframe">
 		<iframe name="transportframe" 
-		src="D:\metaproject\Naveen\Transportation.html" id="transport2"></iframe></a>
+		src="Naveen/Transportation.html" id="transport2"></iframe></a>
 	<div style="top: 325;left: 1000;width: 300;height: 200;position: absolute;z-index: 5;" onmouseover="transport1f()"></div>
 	<a href=""><div onclick="fadeout2();" style="top:100;left:1200;width:200;height:150;position:absolute;z-index:12;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\games.html">
+	<a href="index tabs/Advantages of meta verse/Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+	<a href="index tabs/Advantages of meta verse/games.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
-     <a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html"><div style="position:fixed;z-index:6;top:0;left:650;width:200;height:100;"></div></a> 
+     <a href="index tabs/Advantages of meta verse/Advantages.html"><div style="position:fixed;z-index:6;top:0;left:650;width:200;height:100;"></div></a> 
 
 </body>
