--- a/index tabs/access/access.html
+++ b/index tabs/access/access.html
@@ -7,7 +7,7 @@
                 filter: blur(5px); 
             } 
          </style>
-         <script src="D:\metaproject\jq.js"></script>
+         <script src="jq.js"></script>
          <script>
             var a=0;
             function equipanim3()
@@ -45,16 +45,16 @@
       </head>
    <body style="overflow:hidden">
    <div style="z-index: -2;position: absolute;top:-10; left:-10;width: 1591;height: 899;">
-   	<img id="img1" src="D:\metaproject\gifs\space.gif" width="1591" height="899">
+   	<img id="img1" src="gifs/space.gif" width="1591" height="899">
    </img>
    </div>
 
    <div style="z-index: 3;position: absolute;top: 5;left: 20;width: 1500;
    height: 850;">
-   <img src="D:\metaproject\index tabs\access\access template.png" width="1500" height="850">
+   <img src="index tabs/access/access template.png" width="1500" height="850">
 </div>
 <img  id="equipanim" onclick="equipanim3();" style="z-index:7;position:absolute;top:110;left:580; border-style:double;border-color:ghostwhite;border-width:5;" 
-    src="D:\metaproject\images\equipment.jpg" width="410" height="330" >
+    src="images/equipment.jpg" width="410" height="330" >
 
 
 <div style="z-index:5;position: absolute;font-size: 25;color:ghostwhite;font-family:arial ; top:80; left:60;width:500; height: 795;text-align: justify;" >
@@ -74,12 +74,12 @@ The headset also carries sound from all directions and it will also let you hear
     Although not all Metaverse platforms require a dedicated virtual reality headset. Some of the metaverse platforms like Decentraland can be experienced by just using your desktop PC or laptop using your internet browser. But to best experience the platforms ultimately all Metaverse platforms might require a VR headset but right now its not mandatory.
 </p>
 </div>
-<a href="D:\metaproject\index tabs\access\access2.html">
+<a href="index tabs/access/access2.html">
     <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div>
 </a>
-<a href="D:\metaproject\index tabs\companies.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a>
+<a href="index tabs/companies.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a>
 
 </body>
 </html>
