--- a/index tabs/companies.html
+++ b/index tabs/companies.html
@@ -9,12 +9,12 @@
 	<div style="position: fixed;z-index: 2;left:20;top:120;height:720;width:1490;background:linear-gradient(135deg,#9966cc,#ff99ff);border-color:green;border-style:dashed;"></div>
 	<img style="position: fixed;z-index:3;left:35;top:135;height:325;width: 500;
 			border-style:dotted;border-color:floralwhite;border-width:3;"
-		 src="D:\metaproject\images\metaversecompanies.jpg">
-	 <a href="D:\metaproject\index tabs\access\access.html"><img style="position: fixed;z-index:3;left:35;top:475;height:325;width: 500;
+		 src="images/metaversecompanies.jpg">
+	 <a href="index tabs/access/access.html"><img style="position: fixed;z-index:3;left:35;top:475;height:325;width: 500;
 		border-style:dotted;border-color:floralwhite;border-width:3;"
-	 src="D:\metaproject\images\metaverseplayers.jpg"></a>
+	 src="images/metaverseplayers.jpg"></a>
 	 <div style="position: fixed;z-index:3;left:550;width:950;height:670;top:135;
-	 	background-image: url(D:/metaproject/infobg.png);">
+	 	background-image: url(infobg.png);">
 	 </div>
 	 <div style="position: fixed;z-index: 4;left:570;width:910;height:630;top:155;
 	 		font-size: 25;color: #dddddd;font-family:arial;">
@@ -30,7 +30,7 @@
 	 	<li>NVIDIA</li>
 	 	<li>Synthesis AI</li>
 	 </ol>
-	 <a href="D:\metaproject\index tabs\history tab\history.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a>
+	 <a href="index tabs/history tab/history.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a>
 </body>
 </html>
