--- a/index tabs/disadvantages.html
+++ b/index tabs/disadvantages.html
@@ -99,12 +99,12 @@ body{
 <body style="overflow:hidden;">
   <font color="black">
     <div style="position: absolute;left: -10;top: 90;">
-            <img src="D:\metaproject\images\3D hologram3.jpg" width="1537" height="870"></div>
+            <img src="images/3D hologram3.jpg" width="1537" height="870"></div>
     <div class="container">
         <div class="hexagon">
             <div class="hexagon-shape">
                 
-                <img src="D:\metaproject\images\social impact.jfif" alt="">
+                <img src="images/social impact.jfif" alt="">
                 <div class="content">
                     <div>
                         <h2>Social Impact</h2>
@@ -115,7 +115,7 @@ body{
         </div>
         <div class="hexagon">
             <div class="hexagon-shape">
-                <img src="D:\metaproject\images\privacy issues.jpg" >
+                <img src="images/privacy issues.jpg" >
                 <div class="content">
                     <div>
                         <h2>Privacy</h2>
@@ -126,7 +126,7 @@ body{
         </div>
         <div class="hexagon">
             <div class="hexagon-shape">
-                <img src="D:\metaproject\images\internetconnection.jpg" >
+                <img src="images/internetconnection.jpg" >
                 <div class="content">
                     <div>
                         <h2>Internet</h2>
@@ -137,7 +137,7 @@ body{
         </div>
         <div class="hexagon">
             <div class="hexagon-shape">
-                <img src="D:\metaproject\images\equipmentovr.jpg" >
+                <img src="images/equipmentovr.jpg" >
                 <div class="content">
                     <div>
                         <h2>Requires technology</h2>
@@ -146,10 +146,10 @@ body{
                 </div>
             </div>
         </div>
-        <a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html">
+        <a href="index tabs/Advantages of meta verse/Advantages.html">
             <div class="hexagon">
             <div class="hexagon-shape">
-                <img src="D:\metaproject\images\mental issues.webp">
+                <img src="images/mental issues.webp">
                 <div class="content">
                     <div>
                         <h2>psychological issues</h2>
@@ -165,7 +165,7 @@ body{
         </div></a>
         <div class="hexagon">
             <div class="hexagon-shape">
-                <img src="D:\metaproject\images\eye disablity.webp">
+                <img src="images/eye disablity.webp">
                 <div class="content">
                     <div>
                         <h2>Eye Disability</h2>
@@ -176,7 +176,7 @@ body{
         </div>
         <div class="hexagon">
             <div class="hexagon-shape">
-                <img src="D:\metaproject\images\virualcrime.jpg">
+                <img src="images/virualcrime.jpg">
                 <div class="content">
                     <div>
                         <h2>Virtual Crime</h2>
@@ -185,9 +185,9 @@ body{
                 </div>
             </div>
         </div>
-         <a href="D:\metaproject\Naveen\aligation and critcs.html"><div class="hexagon">
+         <a href="Naveen/aligation and critcs.html"><div class="hexagon">
             <div class="hexagon-shape">
-                <img src="D:\metaproject\images\minors.jfif">
+                <img src="images/minors.jfif">
                 <div class="content">
                     <div>
                         <h2>Adverse impact on minors</h2>
