--- a/index tabs/history tab/history.html
+++ b/index tabs/history tab/history.html
@@ -5,11 +5,11 @@
 </head>
 <body style="overflow:hidden;">
 <div style="z-index: 2;position: absolute;top:-5; left:-5;width: 1530;height: 890;">
-    <img id="img1" src="D:\metaproject\gifs\eaa923d6c1cb0e8af1ad13b062f76bab.gif" height="890" width="1530">
+    <img id="img1" src="gifs/eaa923d6c1cb0e8af1ad13b062f76bab.gif" height="890" width="1530">
 </div>
 <div style="z-index: 3;position: absolute;top: 30;left: 20;width: 1500;
    height: 800;">
-   <img src="D:\metaproject\index tabs\history tab\history background.png" height="800" width="1500">
+   <img src="index tabs/history tab/history background.png" height="800" width="1500">
 </div>
 <div style="z-index:4;position: absolute;font-size: 25;color:ghostwhite;font-family:arial ; top:70; left:40;width:1450; height: 795;text-align: justify;" >
    <p> Believe it or not, the term metaverse originated back in 1992 courtesy of writer Neal Stephenson. In his novel “Snow Crash”, Stephenson explains the metaverse as a virtual place where people interact with digital avatars. 
@@ -31,13 +31,13 @@ Another representation of the metaverse in pop culture is the central plot of th
 </div>
   <div style="z-index:4;position: absolute;left: 1100;top:540; width: 400;height: 230;">
   <video height="300" width="400" autoplay  controls="hidden" muted loop="true"  >
-   <source src="D:\metaproject\index tabs\history tab\Snow Crash in VR.mp4" width="100" height="80"></source>
+   <source src="index tabs/history tab/Snow Crash in VR.mp4" width="100" height="80"></source>
    </video>
 </div>
-<a href="D:\metaproject\index tabs\companies.html"><div style="z-index:5;position:absolute;left:1100;top:310;width:400; height: 230;">
-   <img src="D:\metaproject\index tabs\history tab\metaverse-multiverse-2022.gif" height="230" width="400">
+<a href="index tabs/companies.html"><div style="z-index:5;position:absolute;left:1100;top:310;width:400; height: 230;">
+   <img src="index tabs/history tab/metaverse-multiverse-2022.gif" height="230" width="400">
 </div></a>
-<a href="D:\metaproject\index tabs\introduction tab\introduction.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a>
+<a href="index tabs/introduction tab/introduction.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a>
 </body>
    </html>
