--- a/index tabs/overview.html
+++ b/index tabs/overview.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>overview</title>
-	<script src="D:\metaproject\jq.js"></script>
+	<script src="jq.js"></script>
 	<script language="javascript">
 		function text1fadeIn(){
 			$("#text1").fadeIn(1000);
@@ -40,7 +40,7 @@
 </head>
 <body>
 	<img style="z-index: 0;position: fixed;right:0;bottom:0;min-height: 100%;
-	min-width: 100%;" src="D:\metaproject\images\overview.jpeg">
+	min-width: 100%;" src="images/overview.jpeg">
 	<div style="z-index:2;position:fixed;top:50;left:18;height:700;width:765;" onclick="fadetog()"></div>
 	<p style="z-index:1;position:fixed;top:50;left:18;height:700;width:765;text-align: center;color:#333333;font-family: arial; 
 		font-size:25px;word-spacing: 5px;" id="text1" >
@@ -55,8 +55,8 @@ and do whatever they want like<br> studying, playing, attending meetings and <br
 Metaverse is<br> applicable to buying virtual 3D goods for our avatars,<br> playing online immersive games, using E-commerce<br> platforms to try the product in the Metaverse before even<br> actually ordering it, and buying cryptocurrency tokens.<br>
 Metaverse is made possible by using Virtual reality devices that support theusers to take them to a 3D environment. It also makes use of the various motion tracking sensors that are attached to the user’s hands to be able to interact with the virtual objects in the Metaverse.<br><span style="text-decoration: underline;text-decoration-color: royalblue;color:brown;">Metaverse Ecosystem</span><br>
 The Metaverse ecosystem is basically a self imaginary experience for the users which allows them to interact with two people using the metaverse technology. The metaverse ecosystem basically deals with the creation of online virtual reality rooms where the userswill share their thoughts and ideas and communicate with each other on the metaverse in virtual reality. For example – Roblox allows its <br>users to create online rooms while playing games for<br> interaction with the users within the Roblox ecosystem<br> of the game. This creates an immersive ecosystem<br> for the users to pursue and create the characters<br> and stories for the interaction between the<br> users and their avatars.</p>
-<a href="D:\metaproject\Naveen\aligation and critcs.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\index tabs\conclusion.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+<a href="Naveen/aligation and critcs.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="index tabs/conclusion.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
 </body>
 </html>
