--- a/index tabs/thankyou.html
+++ b/index tabs/thankyou.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 	<img style="z-index: 0;position: fixed;left:0;top:0;min-height: 100%;
-	min-width: 100%;" src="D:\metaproject\images\thankyou.jpeg">
-<a href="D:\metaproject\index tabs\conclusion.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Homepage.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+	min-width: 100%;" src="images/thankyou.jpeg">
+<a href="index tabs/conclusion.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Homepage.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
 </body>
 </html>
