--- a/index tabs/zoo.html
+++ b/index tabs/zoo.html
@@ -4,14 +4,14 @@
 </head>
 <body>
 	<img style="z-index:0;position: fixed;right: 0;bottom:0;min-height: 100%;
-	min-width:100%" src="D:\metaproject\images\zoobg.jpg">
-	<img style="z-index:1;position:fixed;left:350;top:330;width:750;height:500;background-image:url(D:/metaproject/infobg.png);border-style:solid;border-color:goldenrod;">
+	min-width:100%" src="images/zoobg.jpg">
+	<img style="z-index:1;position:fixed;left:350;top:330;width:750;height:500;background-image:url(infobg.png);border-style:solid;border-color:goldenrod;">
 	<div style="z-index:2;position:fixed;left:360;top:340;width:730;height:490;font-size:28;color:whitesmoke;text-align:justify;"><p>Zoo in a virtual world where you can explore the wilds of a fantasy land. You can even visit virtual animals that live in the wild. virtual animals are those that are designed and made by humans.There are many benefits to the zoo in a virtual world. For one thing, the zoo in a virtual world is a great way to teach your children about the wilds of a fantasy land. It’s a great educational tool for both kids and adults. 
 
 	The zoo in a virtual world is also a great way to entertain yourself. There’s nothing like going on an adventure in a virtual world. It can provide a great way for people to get to know animals they may not normally see. It can help to teach children about conservation and environmental issues. You don’t have to worry about getting bitten by a real animal.</p></div>
-	 <a href="D:\metaproject\aravind\hill places.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\aravind\oceans.html">   <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
+	 <a href="aravind/hill places.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="aravind/oceans.html">   <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </body>
 </html>
