--- a/Naveen/Agriculture.html
+++ b/Naveen/Agriculture.html
@@ -6,11 +6,11 @@
    overflow: hidden;">
     <div style="z-index:1; position: absolute; top:100; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/download (4).jpeg"  height="318" width="528">
+  <img src ="images/download (4).jpeg"  height="318" width="528">
      </div>
      <div style="z-index:2; position: absolute;top:450; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images/download (3).jpeg" height="318" width="528">
+  <img src ="images/download (3).jpeg" height="318" width="528">
      </div>
       <div style="z-index:3;position: absolute;left:410;top:13; font-size: 60px;
  color:deeppink; text-decoration:underline; text-decoration-color:lightgreen; 
@@ -23,8 +23,8 @@
       Indoor farmers can be trained and taught from anywhere in the world in a more immersive, interactive, and clear way. Education can be adapted and customized by language, environment, and in many other ways.
       A world reinvented via a virtual lens is becoming a more enticing reality of our time. The virtual reality market is growing fast and clocked in at $4.8 billion in 2021 and is only going up from there with the market projected to reach $12 billion by 2024. The Metaverse, a network of 3D virtual worlds centered around social connection, holds serious potential to penetrate just about every industry that we know, and Indoor Agriculture is no exception.
  </div>
- <a href="D:\metaproject\aravind\chemistry.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\anil\commerce in metaverce.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+ <a href="aravind/chemistry.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="anil/commerce in metaverce.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
 </body>
 </html>
