--- a/Naveen/marriages.html
+++ b/Naveen/marriages.html
@@ -5,11 +5,11 @@
 <body style="background:linear-gradient(to right, #c6ffdd,#fbd786,#f7797d); overflow: hidden;">
 	<div style="z-index:1; position: absolute;top:100; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\marriage1.jpg" height="318" width="528">
+  <img src ="/images/marriage1.jpg" height="318" width="528">
      </div>
      <div style="z-index:2; position: absolute;top:450; left:950;width:1528;
   height: 500;">
-  <img src ="D:\metaproject\images\wedding.jpg" height="318" width="528">
+  <img src ="images/wedding.jpg" height="318" width="528">
      </div>
      <div style="z-index:3;position: absolute;left:295;top:25; font-size: 50px;
  color:lightseagreen; text-decoration:underline; text-decoration-color:blue ; 
@@ -21,9 +21,9 @@
      	Like a ceremony within a video game, though, it is important to note that any weddings that occur solely in the metaverse are currently not legal. (Even virtual weddings by videoconference, which many states allowed during the height of the pandemic shutdowns, have since been outlawed in New York State and elsewhere.)
      	What is a virtual wedding? A virtual wedding is a wedding where the officiant, guests, and couple are joined together by a video call. Having your wedding ceremony virtual doesn't mean you can't have the extras like a venue, decor, flowers, live musician and more!</p>
      </div>
-     <a href="D:\metaproject\Naveen\medical.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-   <a href="D:\metaproject\index tabs\Advantages of meta verse\Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Naveen\3d video call.html">
+     <a href="Naveen/medical.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+   <a href="index tabs/Advantages of meta verse/Teleconference.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Naveen/3d video call.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </body>
