--- a/index tabs/Advantages of meta verse/Advantages.html
+++ b/index tabs/Advantages of meta verse/Advantages.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Advantages of metaverse</title>
-	<script src="D:\metaproject\jq.js"></script>
+	<script src="jq.js"></script>
 	<style>
 		#img1
 		{
@@ -107,42 +107,42 @@
 	</script>
 </head>
 <body>
-	<img id="img1" style="z-index:-1; position: absolute; top:0; left:0; height:864; width:1536;" src="D:\metaproject\gifs\advgif.gif">
+	<img id="img1" style="z-index:-1; position: absolute; top:0; left:0; height:864; width:1536;" src="gifs/advgif.gif">
   </img>
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\learning2.html"><img onmouseenter="advanim1();" id="advanimi" 
+		<a href="index tabs/Advantages of meta verse/learning2.html"><img onmouseenter="advanim1();" id="advanimi" 
 			 onmouseleave="advanim1a();"
-		src="D:\metaproject\images\learning.png" width="240"	height="700" style="z-index: 1;position: absolute;top:80; left:20;width: 240;height: 700;border-style:ridge;border-color:white;">
+		src="images/learning.png" width="240"	height="700" style="z-index: 1;position: absolute;top:80; left:20;width: 240;height: 700;border-style:ridge;border-color:white;">
 	</img></a>
 	
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\commerce and crypto.html"><img onmouseenter="advanim2();" id="advanimi2" 
+		<a href="index tabs/Advantages of meta verse/commerce and crypto.html"><img onmouseenter="advanim2();" id="advanimi2" 
 			 onmouseleave="advanim2a();" 
-			 src="D:\metaproject\images\business and marketing .png" width="240"	height="700" style="z-index: 1;position: absolute;top:80; left:270;width: 240;height: 700;border-style:ridge;border-color:white">
+			 src="images/business and marketing .png" width="240"	height="700" style="z-index: 1;position: absolute;top:80; left:270;width: 240;height: 700;border-style:ridge;border-color:white">
 	</img></a>
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\exploration3.html"><img onmouseenter="advanim3();" id="advanimi3" 
+		<a href="index tabs/Advantages of meta verse/exploration3.html"><img onmouseenter="advanim3();" id="advanimi3" 
 			 onmouseleave="advanim3a();"
-			  src="D:\metaproject\images\Exploration of world.jpg" width="240" style="z-index: 1;position: absolute;top:80; left:520;width: 240;height: 700;border-style:ridge;border-color:white"
+			  src="images/Exploration of world.jpg" width="240" style="z-index: 1;position: absolute;top:80; left:520;width: 240;height: 700;border-style:ridge;border-color:white"
 		height="700">
 	</img></a>
-		<a href="D:\metaproject\index tabs\Advantages of meta verse\teleworking.html"><img onmouseenter="advanim4();" id="advanimi4" 
+		<a href="index tabs/Advantages of meta verse/teleworking.html"><img onmouseenter="advanim4();" id="advanimi4" 
 			 onmouseleave="advanim4a();"
-			  src="D:\metaproject\images\Teleconference.jpg" width="240" style="z-index: 1;position: absolute;top:80; left:770;width: 240;height: 700;border-style:ridge;border-color:white"
+			  src="images/Teleconference.jpg" width="240" style="z-index: 1;position: absolute;top:80; left:770;width: 240;height: 700;border-style:ridge;border-color:white"
 		height="700">
 	</img></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\games.html"><img onmouseenter="advanim5();" id="advanimi5" 
+	<a href="index tabs/Advantages of meta verse/games.html"><img onmouseenter="advanim5();" id="advanimi5" 
 			 onmouseleave="advanim5a();"
-			  src="D:\metaproject\images\Entertainment.jpg" width="240" style="z-index: 1;position: absolute;top:80; left:1020;width: 240;height: 700;border-style:ridge;border-color:white"
+			  src="images/Entertainment.jpg" width="240" style="z-index: 1;position: absolute;top:80; left:1020;width: 240;height: 700;border-style:ridge;border-color:white"
 		height="700">
 	</img></a>
 	
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\Others.html"><img onmouseenter="advanim6();" id="advanimi6" 
+	<a href="index tabs/Advantages of meta verse/Others.html"><img onmouseenter="advanim6();" id="advanimi6" 
 			 onmouseleave="advanim6a();"
-			  src="D:\metaproject\images\Others.jpg" width="240"height="700" style="z-index: 1;position: absolute;top:80; left:1270;width: 240;height: 700;border-style:ridge;border-color:white">
+			  src="images/Others.jpg" width="240"height="700" style="z-index: 1;position: absolute;top:80; left:1270;width: 240;height: 700;border-style:ridge;border-color:white">
 	</img></a>
 	</body>
 	
-	<a href="D:\metaproject\index tabs\access\access2.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-	<a href="D:\metaproject\index tabs\disadvantages.html">
+	<a href="index tabs/access/access2.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+	<a href="index tabs/disadvantages.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </html>
