--- a/index tabs/Advantages of meta verse/Others.html
+++ b/index tabs/Advantages of meta verse/Others.html
@@ -2,9 +2,9 @@
 <head>  
   <title>jQuery UI Accordion - Default functionality</title>  
   <meta charset="utf-8">
-  <link href="D:\metaproject\jquery-ui-1.13.1\jquery-ui.min.css" rel="stylesheet" type="text/css"/>
-  <script src="D:\metaproject\jquery-ui-1.13.1\external\jquery\jquery.js" type="text/javascript"></script>
-  <script src="D:\metaproject\jquery-ui-1.13.1\jquery-ui.min.js" type="text/javascript">
+  <link href="jquery-ui-1.13.1/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
+  <script src="jquery-ui-1.13.1/external/jquery/jquery.js" type="text/javascript"></script>
+  <script src="jquery-ui-1.13.1/jquery-ui.min.js" type="text/javascript">
   </script>  
   <script>  
 					$(function() 
@@ -30,9 +30,9 @@
   <p>Infinite Virtual Space (IVS) was established under the continuous development of Metaverse. IVS is to build an overall framework for integrating Metaverse, including protocols, front-end development engines, cross-chain mechanisms and economic models, and provide a complete infrastructure for Metaverse.</p>
 </div>
   <img  style="position: relative;top:0;left: 1130;width: 300;height: 200;
-          border:double 2px #ffffff" src="D:\metaproject\images\infinite space.jpg" >
+          border:double 2px #ffffff" src="images/infinite space.jpg" >
   <img style="position: relative;top: -220;left: 821;border:double 2px #ffffff;
-       width:300;height:200;" src="D:\metaproject\images\infinite space2.jpg" >
+       width:300;height:200;" src="images/infinite space2.jpg" >
   </div>
   <h3 style="background: linear-gradient(to right,#67006D,#BA00FF);color:white;border-style:solid;border-width:2;border-color:white;font-size:30;">
     Remove dependence on hardware</h3>
@@ -56,9 +56,9 @@
 
 </div>
   <img  style="position: relative;top:0;left: -20;width: 300;height: 200;
-          border:double 2px #ffffff" src="D:\metaproject\images\infinite space2.jpg" >
+          border:double 2px #ffffff" src="images/infinite space2.jpg" >
   <img style="position: relative;top: -220;left: -330;border:double 2px #ffffff;
-       width:300;height:200;" src="D:\metaproject\images\hardware.jpg" >
+       width:300;height:200;" src="images/hardware.jpg" >
     </div>
     <h3 style="background: linear-gradient(to right,#006426,#00FF6C);color:white;border-style:solid;border-width:2;border-color:white;font-size:30;">
     3d holograms</h3>
@@ -72,9 +72,9 @@
 </p>
 </div>
   <img  style="position: relative;top:0;left: 1130;width: 300;height: 200;
-          border:double 2px #ffffff" src= "D:\metaproject\images\3D hologram3.jpg">
+          border:double 2px #ffffff" src= "images/3D hologram3.jpg">
   <img style="position: relative;top: -220;left: 821;border:double 2px #ffffff;
-       width:300;height:200;" src="D:\metaproject\images\3d hologram.jpg" > 
+       width:300;height:200;" src="images/3d hologram.jpg" > 
     </div>
     <h3 style="background: linear-gradient(to right,#712C03,#FDD63C);color:white;border-style:solid;border-width:2;border-color:white;font-size:30;">
     physical pleasures</h3>
@@ -94,14 +94,14 @@
   </p>
 </div>
   <img  style="position: relative;top:0;left: -20;width: 300;height: 200;
-          border:double 2px #ffffff" src="D:\metaproject\images\kiss.jpg" >
+          border:double 2px #ffffff" src="images/kiss.jpg" >
   <img style="position: relative;top: -220;left: -330;border:double 2px #ffffff;
-       width:300;height:200;" src="D:\metaproject\images\kiss3.jpg" >
+       width:300;height:200;" src="images/kiss3.jpg" >
     </div>    
    </div>  
-   <a href="D:\metaproject\index tabs\Advantages of meta verse\games.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html">
+   <a href="index tabs/Advantages of meta verse/games.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+  <a href="index tabs/Advantages of meta verse/Advantages.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>
 </body>
