--- a/index tabs/Advantages of meta verse/Teleconference.html
+++ b/index tabs/Advantages of meta verse/Teleconference.html
@@ -88,39 +88,39 @@
 <body style="overflow:hidden">	
 	
 	<img style="z-index:-10;position: fixed;min-height: 100%;min-width: 100%;height: 100%;width:100%;right:0;bottom:0" 
-		 src="D:\metaproject\images\teseawithsky.jpg" ></a>
+		 src="images/teseawithsky.jpg" ></a>
 
-	<a href="D:\metaproject\Naveen\political.html"><img style="z-index:1;position:absolute;opacity: 0;
+	<a href="Naveen/political.html"><img style="z-index:1;position:absolute;opacity: 0;
 				border-style: solid;border-color:#ffffff;border-radius: 5%;
 				box-shadow:0px 0px 10px 5px #ffffff;"
-		src="D:\metaproject\images\tepoliticalmeetings.jpg" id="img1"></a>
+		src="images/tepoliticalmeetings.jpg" id="img1"></a>
 
-	<a href="D:\metaproject\Naveen\medical.html"><img style="z-index:1;position:absolute;opacity: 0;
+	<a href="Naveen/medical.html"><img style="z-index:1;position:absolute;opacity: 0;
 				border-style:solid;border-color: #ffffff;border-radius: 5%;
 				box-shadow: 0px 0px 10px 5px #ffffff;"
-		 src="D:\metaproject\images\temedical meta.jpg" id="img2"></a>
+		 src="images/temedical meta.jpg" id="img2"></a>
 
-	<a href="D:\metaproject\Naveen\marriages.html"><img style="z-index:1;position:absolute;opacity: 0;
+	<a href="Naveen/marriages.html"><img style="z-index:1;position:absolute;opacity: 0;
 				border-style:solid;border-color: #ffffff;border-radius: 5%;
 				box-shadow: 0px 0px 10px 5px #ffffff;"
-		 src="D:\metaproject\images\temarriages.jpg" id="img3"></a>
+		 src="images/temarriages.jpg" id="img3"></a>
 
-	<a href="D:\metaproject\Naveen\3d video call.html"><img style="z-index:1;position:absolute;opacity: 0;
+	<a href="Naveen/3d video call.html"><img style="z-index:1;position:absolute;opacity: 0;
 				border-style:solid;border-color: #ffffff;border-radius: 5%;
 				box-shadow: 0px 0px 10px 5px #ffffff;"
-		 src="D:\metaproject\images\tevideocalling.jpg" id="img4"></a>
+		 src="images/tevideocalling.jpg" id="img4"></a>
 
-	<img src="D:\metaproject\images\fireball2.png" id="fb1">
-	<img src="D:\metaproject\images\fireball2.png" id="fb2">
-	<img src="D:\metaproject\images\fireball2.png" id="fb3">
-	<img src="D:\metaproject\images\fireball2.png" id="fb4">
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\games.html">
+	<img src="images/fireball2.png" id="fb1">
+	<img src="images/fireball2.png" id="fb2">
+	<img src="images/fireball2.png" id="fb3">
+	<img src="images/fireball2.png" id="fb4">
+	<a href="index tabs/Advantages of meta verse/games.html">
     <div style="position: absolute;z-index:10;right: 40;bottom: 30;height:100;width:100;">
     </div>
 </a>
-<a href="D:\metaproject\index tabs\Advantages of meta verse\exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-	<a href="D:\metaproject\index tabs\Advantages of meta verse\Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\index tabs\Advantages of meta verse\workplace.html">
+<a href="index tabs/Advantages of meta verse/exploration3.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+	<a href="index tabs/Advantages of meta verse/Advantages.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="index tabs/Advantages of meta verse/workplace.html">
    <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">
     </div></a>	
 
