--- a/index tabs/introduction tab/introduction.html
+++ b/index tabs/introduction tab/introduction.html
@@ -14,11 +14,11 @@
 <body style="overflow:hidden;">
 
 <div style="z-index: -2;position: absolute;top:-5; left:-5;width: 1550;height: 870;">
-    <img id="img1" src="D:\metaproject\gifs\original.gif" height="870" width="1550">
+    <img id="img1" src="gifs/original.gif" height="870" width="1550">
 </div>/
 <div style="z-index:-1;position: absolute;top: 30;left: 20;width: 1500;
    height: 800;">
-   <img src="D:\metaproject\introduction 1.png" height="800" width="1500">
+   <img src="introduction 1.png" height="800" width="1500">
    </div>
    
    <div style="z-index:4; position:absolute;top:70; left: 40;font-size: 27       ;width:1100;height:800;color:ghostwhite;text-align: justify;">
@@ -34,13 +34,13 @@ You can already see some aspects of the metaverse in existing virtual video game
 </p>
 </div>
 <div style="z-index:5; position: absolute;top: 100;left: 1177;width: 300;height: 300;">
-   <img src="D:\metaproject\gifs\metaverse-zuckerberg.gif" border="5" border-color="white" width="300"height="300">
+   <img src="gifs/metaverse-zuckerberg.gif" border="5" border-color="white" width="300"height="300">
 </div>
 <div style="z-index:5; position: absolute;top: 450;left: 1177;width: 300;height: 300;">
-   <a href="D:\metaproject\index tabs\history tab\history.html"><img src="D:\metaproject\gifs\metaverseintroduction.gif"  width="300"height="300"></a>
+   <a href="index tabs/history tab/history.html"><img src="gifs/metaverseintroduction.gif"  width="300"height="300"></a>
 </div>
-<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-<a href="D:\metaproject\Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a>
+<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+<a href="Index2.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a>
 
 </body>
    </html>
